--- a/index.html
+++ b/index.html
@@ -34,7 +34,25 @@
 </head>
 
 <body id="page-top" class="index">
+<-- Facebook Login -->                                                 
+    <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1780186092250726',
+      xfbml      : true,
+      version    : 'v2.6'
+    });
+  };
 
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+    <-- End Login -->
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
