--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 
 <body id="page-top" class="index">
-<-- Facebook Login -->                                                 
+<!-- Facebook Login -->                                                 
     <script>
   window.fbAsyncInit = function() {
     FB.init({
@@ -52,7 +52,7 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
-    <-- End Login -->
+    <!-- End Login -->
         <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
