--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>-->
                     <<li>
-                        <a class="page-scroll" href="#contact">Team</a>
+                        <!--<a class="page-scroll" href="#contact">Team</a>-->
                     <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="true" data-auto-logout-link="true"></div>
                     </li>
                     <li>
