--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
                     </li>
                     <<li>
                         <!--<a class="page-scroll" href="#contact">Team</a>-->
-                    <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="true" data-auto-logout-link="true"></div>
-                    </li>
+<div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true"></div>                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
